--- a/GPT2_HF/GPT2_Train/asdf.ipynb
+++ b/GPT2_HF/GPT2_Train/asdf.ipynb
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1136,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.eos_token_id = 50257"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ĠAzak'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.eos_token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50256"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.eos_token_id\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1145,18 +1194,18 @@
        "0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tokenizer.eos_token_id"
+    "tokenizer.bos_token_id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1215,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m tokenizer\u001b[38;5;241m.\u001b[39mdecode(\u001b[43minput_ids\u001b[49m)\n",
+      "Cell \u001b[1;32mIn[22], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m tokenizer\u001b[38;5;241m.\u001b[39mdecode(\u001b[43minput_ids\u001b[49m)\n",
       "\u001b[1;31mNameError\u001b[0m: name 'input_ids' is not defined"
      ]
     }
@@ -1177,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1237,7 @@
        " 'unk_token': '<|endoftext|>'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1266,16 +1315,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = GPT2Config(eos_token_id=0, bos_token_id= 0, )"
+    "config = GPT2Config(eos_token_id=0, bos_token_id= 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1333,7 @@
        "GPT2Config {\n",
        "  \"activation_function\": \"gelu_new\",\n",
        "  \"attn_pdrop\": 0.1,\n",
-       "  \"bos_token_id\": 50256,\n",
+       "  \"bos_token_id\": 0,\n",
        "  \"embd_pdrop\": 0.1,\n",
        "  \"eos_token_id\": 0,\n",
        "  \"initializer_range\": 0.02,\n",
@@ -1310,13 +1359,139 @@
        "}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "size_dict = {\n",
+    "        'gpt2':       {'n_layer': 12, 'n_head': 12, 'n_embd': 768},   # 124M params\n",
+    "        'gpt2-medium':{'n_layer': 24, 'n_head': 16, 'n_embd': 1024},   # 350M params\n",
+    "        'gpt2-large': {'n_layer': 36, 'n_head': 20, 'n_embd': 1280},   # 774M params\n",
+    "        'gpt2-xl':    {'n_layer': 48, 'n_head': 25, 'n_embd': 1600}   # 1558M params\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = GPT2Config(eos_token_id=0, bos_token_id=0, **size_dict[\"gpt2-xl\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GPT2Config {\n",
+       "  \"activation_function\": \"gelu_new\",\n",
+       "  \"attn_pdrop\": 0.1,\n",
+       "  \"bos_token_id\": 0,\n",
+       "  \"embd_pdrop\": 0.1,\n",
+       "  \"eos_token_id\": 0,\n",
+       "  \"initializer_range\": 0.02,\n",
+       "  \"layer_norm_epsilon\": 1e-05,\n",
+       "  \"model_type\": \"gpt2\",\n",
+       "  \"n_embd\": 1600,\n",
+       "  \"n_head\": 25,\n",
+       "  \"n_inner\": null,\n",
+       "  \"n_layer\": 48,\n",
+       "  \"n_positions\": 1024,\n",
+       "  \"reorder_and_upcast_attn\": false,\n",
+       "  \"resid_pdrop\": 0.1,\n",
+       "  \"scale_attn_by_inverse_layer_idx\": false,\n",
+       "  \"scale_attn_weights\": true,\n",
+       "  \"summary_activation\": null,\n",
+       "  \"summary_first_dropout\": 0.1,\n",
+       "  \"summary_proj_to_labels\": true,\n",
+       "  \"summary_type\": \"cls_index\",\n",
+       "  \"summary_use_proj\": true,\n",
+       "  \"transformers_version\": \"4.40.1\",\n",
+       "  \"use_cache\": true,\n",
+       "  \"vocab_size\": 50257\n",
+       "}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_model_size_dict(size):\n",
+    "    size_dict = {\n",
+    "        'gpt2':       {'n_layer': 12, 'n_head': 12, 'n_embd': 768},   # 124M params\n",
+    "        'gpt2-medium':{'n_layer': 24, 'n_head': 16, 'n_embd': 1024},   # 350M params\n",
+    "        'gpt2-large': {'n_layer': 36, 'n_head': 20, 'n_embd': 1280},   # 774M params\n",
+    "        'gpt2-xl':    {'n_layer': 48, 'n_head': 25, 'n_embd': 1600}   # 1558M params\n",
+    "    }\n",
+    "    return size_dict.get(size, None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'n_layer': 48, 'n_head': 25, 'n_embd': 1600}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_model_size_dict(\"gpt2-xl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tokenizer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mtokenizer\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'tokenizer' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "tokenizer"
    ]
   },
   {
