--- a/GPT2_HF/GPT2_Train/asdf.ipynb
+++ b/GPT2_HF/GPT2_Train/asdf.ipynb
@@ -1496,6 +1496,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import GPT2Config, GPT2LMHeadModel\n",
+    "def initialize_model():\n",
+    "    \n",
+    "    model_config = GPT2Config(bos_token_id = 0,eos_token_id=0)\n",
+    "    model = GPT2LMHeadModel(model_config)\n",
+    "    \n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = initialize_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object Module.parameters at 0x0000019C0ADCBD60>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.parameters()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
