--- a/GPT2_HF/train_tokenizer/trainBPE_tokenizer.ipynb
+++ b/GPT2_HF/train_tokenizer/trainBPE_tokenizer.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer = trainers.BpeTrainer(vocab_size=52000, \n",
+    "trainer = trainers.BpeTrainer(vocab_size=50257, \n",
     "                              min_frequency = 1,\n",
     "                              max_token_length = 7,\n",
     "                              special_tokens=[\"<|endoftext|>\"])\n",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,18 +101,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import GPT2Tokenizer\n",
     "\n",
-    "tokenizer = GPT2Tokenizer.from_pretrained(r'C:\\Users\\siren\\Desktop\\1507\\GPT2_HF\\Tokenizer') #directory önemli merges, vocab ve tokenizer.config içinde olacak"
+    "tokenizer = GPT2Tokenizer.from_pretrained(r'C:\\Users\\siren\\Desktop\\1507\\GPT2_HF\\train_tokenizer') #directory önemli merges, vocab ve tokenizer.config içinde olacak"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -131,13 +131,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9af57528a3f8448b84b57146b17d7acd",
+       "model_id": "e6c517c970a04d3a8e35e55c322767ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -156,16 +156,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c929335ce219439da5365af58969218d",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/sergeantson/1507_Law_Tokenizer/commit/2e73b1b0bbe8ba5a4872566eaf8812eef3afd27d', commit_message='Upload tokenizer', commit_description='', oid='2e73b1b0bbe8ba5a4872566eaf8812eef3afd27d', pr_url=None, pr_revision=None, pr_num=None)"
+       "README.md:   0%|          | 0.00/5.17k [00:00<?, ?B/s]"
       ]
      },
-     "execution_count": 29,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\siren\\anaconda3\\envs\\tubitak\\lib\\site-packages\\huggingface_hub\\file_download.py:157: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\siren\\.cache\\huggingface\\hub\\models--sergeantson--1507_Law_Tokenizer. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/sergeantson/1507_Law_Tokenizer/commit/302d3f1edb8554d8f311ac9e1be5d41a38ea9e0b', commit_message='Upload tokenizer', commit_description='', oid='302d3f1edb8554d8f311ac9e1be5d41a38ea9e0b', pr_url=None, pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -228,6 +251,26 @@
    "source": [
     "decoded_string = tokenizer.decode(ids)\n",
     "print(decoded_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50257"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.vocab_size"
    ]
   },
   {
