--- a/dataset/hukuk_raw_dataset/prepare_toHF.ipynb
+++ b/dataset/hukuk_raw_dataset/prepare_toHF.ipynb
@@ -62,7 +62,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2184,7 +2186,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tubitak",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2202,5 +2204,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
