--- a/dataset/web_scraping_finans/YÖK/clearPDF.ipynb
+++ b/dataset/web_scraping_finans/YÖK/clearPDF.ipynb
@@ -2931,7 +2931,197 @@
       "Bozuk pdf: 353084.pdf\n",
       "PDF: 353084.pdf Raw_Pages: 96 Cleared_Total: 0\n",
       "PDF: 353085.pdf Raw_Pages: 100 Cleared_Total: 68\n",
-      "PDF: 353090.pdf Raw_Pages: 141 Cleared_Total: 117\n"
+      "PDF: 353090.pdf Raw_Pages: 141 Cleared_Total: 117\n",
+      "PDF: 353135.pdf Raw_Pages: 143 Cleared_Total: 114\n",
+      "PDF: 353153.pdf Raw_Pages: 74 Cleared_Total: 51\n",
+      "PDF: 353198.pdf Raw_Pages: 136 Cleared_Total: 109\n",
+      "Bozuk pdf: 353207.pdf\n",
+      "PDF: 353207.pdf Raw_Pages: 155 Cleared_Total: 0\n",
+      "PDF: 353224.pdf Raw_Pages: 138 Cleared_Total: 120\n",
+      "PDF: 353300.pdf Raw_Pages: 88 Cleared_Total: 58\n",
+      "PDF: 353405.pdf Raw_Pages: 232 Cleared_Total: 196\n",
+      "PDF: 353416.pdf Raw_Pages: 308 Cleared_Total: 265\n",
+      "PDF: 353454.pdf Raw_Pages: 135 Cleared_Total: 95\n",
+      "PDF: 353570.pdf Raw_Pages: 163 Cleared_Total: 136\n",
+      "PDF: 353652.pdf Raw_Pages: 201 Cleared_Total: 162\n",
+      "PDF: 353763.pdf Raw_Pages: 167 Cleared_Total: 122\n",
+      "PDF: 353824.pdf Raw_Pages: 121 Cleared_Total: 82\n",
+      "PDF: 353825.pdf Raw_Pages: 113 Cleared_Total: 84\n",
+      "PDF: 353826.pdf Raw_Pages: 113 Cleared_Total: 79\n",
+      "PDF: 353829.pdf Raw_Pages: 73 Cleared_Total: 42\n",
+      "PDF: 353909.pdf Raw_Pages: 241 Cleared_Total: 176\n",
+      "PDF: 353969.pdf Raw_Pages: 205 Cleared_Total: 169\n",
+      "PDF: 354018.pdf Raw_Pages: 82 Cleared_Total: 61\n",
+      "PDF: 354083.pdf Raw_Pages: 77 Cleared_Total: 29\n",
+      "PDF: 354120.pdf Raw_Pages: 198 Cleared_Total: 164\n",
+      "PDF: 354592.pdf Raw_Pages: 123 Cleared_Total: 81\n",
+      "PDF: 354595.pdf Raw_Pages: 127 Cleared_Total: 95\n",
+      "PDF: 354596.pdf Raw_Pages: 217 Cleared_Total: 185\n",
+      "PDF: 354607.pdf Raw_Pages: 187 Cleared_Total: 157\n",
+      "PDF: 354609.pdf Raw_Pages: 148 Cleared_Total: 130\n",
+      "PDF: 354610.pdf Raw_Pages: 109 Cleared_Total: 66\n",
+      "PDF: 354611.pdf Raw_Pages: 227 Cleared_Total: 189\n",
+      "Bozuk pdf: 354693.pdf\n",
+      "PDF: 354693.pdf Raw_Pages: 170 Cleared_Total: 0\n",
+      "PDF: 354695.pdf Raw_Pages: 114 Cleared_Total: 78\n",
+      "PDF: 354713.pdf Raw_Pages: 159 Cleared_Total: 117\n",
+      "PDF: 354714.pdf Raw_Pages: 66 Cleared_Total: 18\n",
+      "PDF: 354716.pdf Raw_Pages: 223 Cleared_Total: 167\n",
+      "PDF: 354718.pdf Raw_Pages: 139 Cleared_Total: 97\n",
+      "PDF: 354732.pdf Raw_Pages: 124 Cleared_Total: 98\n",
+      "PDF: 354749.pdf Raw_Pages: 225 Cleared_Total: 184\n",
+      "PDF: 354753.pdf Raw_Pages: 293 Cleared_Total: 255\n",
+      "PDF: 354772.pdf Raw_Pages: 195 Cleared_Total: 164\n",
+      "PDF: 354777.pdf Raw_Pages: 112 Cleared_Total: 95\n",
+      "PDF: 354807.pdf Raw_Pages: 129 Cleared_Total: 97\n",
+      "PDF: 354839.pdf Raw_Pages: 158 Cleared_Total: 117\n",
+      "PDF: 354844.pdf Raw_Pages: 151 Cleared_Total: 115\n",
+      "PDF: 354867.pdf Raw_Pages: 329 Cleared_Total: 51\n",
+      "PDF: 354872.pdf Raw_Pages: 311 Cleared_Total: 271\n",
+      "PDF: 354881.pdf Raw_Pages: 127 Cleared_Total: 94\n",
+      "PDF: 354952.pdf Raw_Pages: 197 Cleared_Total: 170\n",
+      "PDF: 355432.pdf Raw_Pages: 83 Cleared_Total: 62\n",
+      "PDF: 355433.pdf Raw_Pages: 104 Cleared_Total: 73\n",
+      "PDF: 355438.pdf Raw_Pages: 87 Cleared_Total: 60\n",
+      "PDF: 355440.pdf Raw_Pages: 116 Cleared_Total: 91\n",
+      "PDF: 355448.pdf Raw_Pages: 103 Cleared_Total: 77\n",
+      "PDF: 355556.pdf Raw_Pages: 100 Cleared_Total: 66\n",
+      "PDF: 355569.pdf Raw_Pages: 123 Cleared_Total: 73\n",
+      "PDF: 355765.pdf Raw_Pages: 172 Cleared_Total: 154\n",
+      "PDF: 355774.pdf Raw_Pages: 88 Cleared_Total: 39\n",
+      "PDF: 355775.pdf Raw_Pages: 398 Cleared_Total: 360\n",
+      "PDF: 355776.pdf Raw_Pages: 395 Cleared_Total: 363\n",
+      "PDF: 355782.pdf Raw_Pages: 207 Cleared_Total: 168\n",
+      "PDF: 355792.pdf Raw_Pages: 432 Cleared_Total: 394\n",
+      "PDF: 355808.pdf Raw_Pages: 181 Cleared_Total: 145\n",
+      "PDF: 355815.pdf Raw_Pages: 146 Cleared_Total: 103\n",
+      "PDF: 355839.pdf Raw_Pages: 116 Cleared_Total: 56\n",
+      "PDF: 355859.pdf Raw_Pages: 208 Cleared_Total: 173\n",
+      "PDF: 355937.pdf Raw_Pages: 167 Cleared_Total: 127\n",
+      "PDF: 355941.pdf Raw_Pages: 102 Cleared_Total: 78\n",
+      "Bozuk pdf: 355942.pdf\n",
+      "PDF: 355942.pdf Raw_Pages: 139 Cleared_Total: 0\n",
+      "PDF: 355943.pdf Raw_Pages: 125 Cleared_Total: 101\n",
+      "PDF: 355954.pdf Raw_Pages: 109 Cleared_Total: 63\n",
+      "PDF: 355958.pdf Raw_Pages: 108 Cleared_Total: 66\n",
+      "PDF: 356165.pdf Raw_Pages: 119 Cleared_Total: 87\n",
+      "PDF: 356231.pdf Raw_Pages: 131 Cleared_Total: 102\n",
+      "PDF: 356253.pdf Raw_Pages: 140 Cleared_Total: 97\n",
+      "PDF: 356276.pdf Raw_Pages: 122 Cleared_Total: 74\n",
+      "PDF: 356285.pdf Raw_Pages: 147 Cleared_Total: 119\n",
+      "PDF: 356382.pdf Raw_Pages: 104 Cleared_Total: 67\n",
+      "PDF: 356410.pdf Raw_Pages: 276 Cleared_Total: 27\n",
+      "PDF: 356415.pdf Raw_Pages: 102 Cleared_Total: 71\n",
+      "PDF: 356419.pdf Raw_Pages: 122 Cleared_Total: 87\n",
+      "PDF: 356421.pdf Raw_Pages: 118 Cleared_Total: 80\n",
+      "PDF: 356424.pdf Raw_Pages: 164 Cleared_Total: 151\n",
+      "PDF: 356426.pdf Raw_Pages: 163 Cleared_Total: 139\n",
+      "PDF: 356428.pdf Raw_Pages: 310 Cleared_Total: 270\n",
+      "PDF: 356433.pdf Raw_Pages: 177 Cleared_Total: 133\n",
+      "PDF: 356442.pdf Raw_Pages: 119 Cleared_Total: 94\n",
+      "PDF: 356446.pdf Raw_Pages: 132 Cleared_Total: 102\n",
+      "PDF: 356457.pdf Raw_Pages: 306 Cleared_Total: 156\n",
+      "PDF: 356465.pdf Raw_Pages: 229 Cleared_Total: 189\n",
+      "PDF: 356466.pdf Raw_Pages: 227 Cleared_Total: 173\n",
+      "PDF: 356474.pdf Raw_Pages: 188 Cleared_Total: 164\n",
+      "PDF: 356479.pdf Raw_Pages: 252 Cleared_Total: 195\n",
+      "PDF: 356480.pdf Raw_Pages: 143 Cleared_Total: 113\n",
+      "PDF: 356485.pdf Raw_Pages: 110 Cleared_Total: 88\n",
+      "Bozuk pdf: 356486.pdf\n",
+      "PDF: 356486.pdf Raw_Pages: 148 Cleared_Total: 0\n",
+      "Bozuk pdf: 356490.pdf\n",
+      "PDF: 356490.pdf Raw_Pages: 148 Cleared_Total: 0\n",
+      "PDF: 356494.pdf Raw_Pages: 107 Cleared_Total: 82\n",
+      "PDF: 356495.pdf Raw_Pages: 183 Cleared_Total: 154\n",
+      "PDF: 356497.pdf Raw_Pages: 172 Cleared_Total: 124\n",
+      "Bozuk pdf: 356503.pdf\n",
+      "PDF: 356503.pdf Raw_Pages: 223 Cleared_Total: 0\n",
+      "PDF: 356504.pdf Raw_Pages: 213 Cleared_Total: 170\n",
+      "PDF: 356509.pdf Raw_Pages: 123 Cleared_Total: 91\n",
+      "PDF: 356526.pdf Raw_Pages: 173 Cleared_Total: 135\n",
+      "PDF: 356528.pdf Raw_Pages: 481 Cleared_Total: 438\n",
+      "PDF: 356533.pdf Raw_Pages: 138 Cleared_Total: 123\n",
+      "PDF: 356535.pdf Raw_Pages: 180 Cleared_Total: 153\n",
+      "PDF: 356540.pdf Raw_Pages: 140 Cleared_Total: 96\n",
+      "PDF: 356652.pdf Raw_Pages: 98 Cleared_Total: 23\n",
+      "PDF: 356663.pdf Raw_Pages: 172 Cleared_Total: 141\n",
+      "PDF: 356690.pdf Raw_Pages: 70 Cleared_Total: 45\n",
+      "PDF: 356708.pdf Raw_Pages: 117 Cleared_Total: 83\n",
+      "PDF: 356711.pdf Raw_Pages: 129 Cleared_Total: 104\n",
+      "PDF: 356716.pdf Raw_Pages: 96 Cleared_Total: 80\n",
+      "PDF: 356726.pdf Raw_Pages: 129 Cleared_Total: 94\n",
+      "PDF: 356754.pdf Raw_Pages: 128 Cleared_Total: 104\n",
+      "PDF: 356777.pdf Raw_Pages: 220 Cleared_Total: 198\n",
+      "PDF: 356778.pdf Raw_Pages: 275 Cleared_Total: 193\n",
+      "PDF: 356779.pdf Raw_Pages: 327 Cleared_Total: 275\n",
+      "PDF: 356793.pdf Raw_Pages: 164 Cleared_Total: 125\n",
+      "PDF: 356838.pdf Raw_Pages: 185 Cleared_Total: 150\n",
+      "Bozuk pdf: 356890.pdf\n",
+      "PDF: 356890.pdf Raw_Pages: 129 Cleared_Total: 0\n",
+      "PDF: 356891.pdf Raw_Pages: 109 Cleared_Total: 67\n",
+      "PDF: 356916.pdf Raw_Pages: 255 Cleared_Total: 204\n",
+      "PDF: 356920.pdf Raw_Pages: 170 Cleared_Total: 133\n",
+      "PDF: 356925.pdf Raw_Pages: 177 Cleared_Total: 134\n",
+      "PDF: 357008.pdf Raw_Pages: 195 Cleared_Total: 165\n",
+      "PDF: 357055.pdf Raw_Pages: 87 Cleared_Total: 48\n",
+      "PDF: 357350.pdf Raw_Pages: 272 Cleared_Total: 224\n",
+      "PDF: 357351.pdf Raw_Pages: 248 Cleared_Total: 202\n",
+      "PDF: 357352.pdf Raw_Pages: 204 Cleared_Total: 173\n",
+      "PDF: 357355.pdf Raw_Pages: 178 Cleared_Total: 132\n",
+      "PDF: 357357.pdf Raw_Pages: 222 Cleared_Total: 183\n",
+      "PDF: 357368.pdf Raw_Pages: 166 Cleared_Total: 139\n",
+      "PDF: 357391.pdf Raw_Pages: 91 Cleared_Total: 61\n",
+      "PDF: 357401.pdf Raw_Pages: 126 Cleared_Total: 92\n",
+      "PDF: 357445.pdf Raw_Pages: 218 Cleared_Total: 175\n",
+      "PDF: 357447.pdf Raw_Pages: 164 Cleared_Total: 124\n",
+      "PDF: 357460.pdf Raw_Pages: 146 Cleared_Total: 107\n",
+      "PDF: 357463.pdf Raw_Pages: 167 Cleared_Total: 129\n",
+      "PDF: 357465.pdf Raw_Pages: 210 Cleared_Total: 175\n",
+      "PDF: 357466.pdf Raw_Pages: 241 Cleared_Total: 194\n",
+      "PDF: 357471.pdf Raw_Pages: 254 Cleared_Total: 207\n",
+      "PDF: 357472.pdf Raw_Pages: 198 Cleared_Total: 154\n",
+      "PDF: 357474.pdf Raw_Pages: 416 Cleared_Total: 367\n",
+      "PDF: 357475.pdf Raw_Pages: 165 Cleared_Total: 131\n",
+      "PDF: 357478.pdf Raw_Pages: 132 Cleared_Total: 97\n",
+      "PDF: 357479.pdf Raw_Pages: 144 Cleared_Total: 105\n",
+      "PDF: 357491.pdf Raw_Pages: 359 Cleared_Total: 305\n",
+      "PDF: 357594.pdf Raw_Pages: 124 Cleared_Total: 97\n",
+      "PDF: 357597.pdf Raw_Pages: 151 Cleared_Total: 128\n",
+      "PDF: 357598.pdf Raw_Pages: 119 Cleared_Total: 80\n",
+      "PDF: 357600.pdf Raw_Pages: 162 Cleared_Total: 115\n",
+      "PDF: 357661.pdf Raw_Pages: 101 Cleared_Total: 74\n",
+      "PDF: 357675.pdf Raw_Pages: 288 Cleared_Total: 240\n",
+      "PDF: 357680.pdf Raw_Pages: 97 Cleared_Total: 59\n",
+      "PDF: 357681.pdf Raw_Pages: 146 Cleared_Total: 110\n",
+      "PDF: 357693.pdf Raw_Pages: 147 Cleared_Total: 117\n",
+      "PDF: 357697.pdf Raw_Pages: 138 Cleared_Total: 108\n",
+      "PDF: 357700.pdf Raw_Pages: 148 Cleared_Total: 130\n",
+      "PDF: 357709.pdf Raw_Pages: 75 Cleared_Total: 29\n",
+      "PDF: 357766.pdf Raw_Pages: 220 Cleared_Total: 185\n",
+      "Bozuk pdf: 357771.pdf\n",
+      "PDF: 357771.pdf Raw_Pages: 95 Cleared_Total: 0\n",
+      "PDF: 357775.pdf Raw_Pages: 228 Cleared_Total: 185\n",
+      "PDF: 357780.pdf Raw_Pages: 192 Cleared_Total: 149\n",
+      "PDF: 357787.pdf Raw_Pages: 337 Cleared_Total: 302\n",
+      "PDF: 357790.pdf Raw_Pages: 134 Cleared_Total: 104\n",
+      "PDF: 357793.pdf Raw_Pages: 189 Cleared_Total: 159\n",
+      "PDF: 357795.pdf Raw_Pages: 137 Cleared_Total: 101\n",
+      "PDF: 357802.pdf Raw_Pages: 98 Cleared_Total: 70\n",
+      "PDF: 358126.pdf Raw_Pages: 153 Cleared_Total: 123\n",
+      "PDF: 358130.pdf Raw_Pages: 214 Cleared_Total: 150\n",
+      "PDF: 358215.pdf Raw_Pages: 98 Cleared_Total: 59\n",
+      "PDF: 358219.pdf Raw_Pages: 79 Cleared_Total: 39\n",
+      "PDF: 358221.pdf Raw_Pages: 139 Cleared_Total: 110\n",
+      "PDF: 358228.pdf Raw_Pages: 145 Cleared_Total: 121\n",
+      "PDF: 358229.pdf Raw_Pages: 146 Cleared_Total: 124\n",
+      "PDF: 358255.pdf Raw_Pages: 162 Cleared_Total: 127\n",
+      "PDF: 358304.pdf Raw_Pages: 100 Cleared_Total: 69\n",
+      "PDF: 358308.pdf Raw_Pages: 168 Cleared_Total: 139\n",
+      "PDF: 358325.pdf Raw_Pages: 119 Cleared_Total: 81\n",
+      "PDF: 358335.pdf Raw_Pages: 142 Cleared_Total: 105\n",
+      "PDF: 358336.pdf Raw_Pages: 93 Cleared_Total: 62\n",
+      "PDF: 358354.pdf Raw_Pages: 100 Cleared_Total: 63\n",
+      "PDF: 358357.pdf Raw_Pages: 226 Cleared_Total: 185\n"
      ]
     }
    ],
