--- a/dataset/finance_raw_dataset/prepare_toHF.ipynb
+++ b/dataset/finance_raw_dataset/prepare_toHF.ipynb
@@ -15,6 +15,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Read CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Clear\n",
     "1) Cid\n",
     "2) non-utf8\n",
@@ -2083,6 +2097,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [],
@@ -2134,7 +2155,7 @@
    "outputs": [],
    "source": [
     "# Train Test Split\n",
-    "train, val = train_test_split(df, test_size = 0.005, random_state=42)"
+    "train, val = train_test_split(df, test_size = 0.010, random_state=42)"
    ]
   },
   {
@@ -2150,10 +2171,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"df.to_parquet(\"dataset_law.parquet\",\n",
+    "df.to_parquet(\"dataset_finance.parquet\",\n",
     "              engine = \"pyarrow\",\n",
     "              compression=\"snappy\",\n",
-    "              index = False)\"\"\""
+    "              index = False)"
    ]
   },
   {
